--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@mui/x-data-grid-pro": "^7.22.1",
     "@nivo/bar": "^0.87.0",
+    "@nivo/boxplot": "^0.87.0",
     "@nivo/geo": "^0.87.0",
+    "@nivo/line": "^0.87.0",
     "@nivo/pie": "^0.87.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
